--- a/kat/Dockerfile
+++ b/kat/Dockerfile
@@ -18,6 +18,13 @@ RUN wget -O- https://github.com/TGAC/KAT/releases/download/Release-2.3.4/kat-2.3
  ./configure && \
  make && \
  make install
+ 
+ RUN wget -O- https://github.com/gmarcais/Jellyfish/releases/download/v2.2.6/jellyfish-2.2.6.tar.gz | \
+ tar zx && \
+ cd jellyfish-2.2.6 && \
+ ./configure --prefix=/usr && \
+ make && make install && \
+ rm -fr /jellyfish-2.2.6
 
 ENTRYPOINT ["kat"]
 CMD ["--help"]
