--- a/guppy/Dockerfile
+++ b/guppy/Dockerfile
@@ -11,4 +11,5 @@ RUN apt-get install -y ont-guppy-cpu
 RUN curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
 RUN unzip awscli-bundle.zip
 RUN ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
-WORKDIR /
+RUN rm -fr ./awscli-bundle
+
